<resources>
    <string name="app_name">Pathfinder Character Creator</string>
    <string name="title">Pathfinder Character Creator</string>
    <string name="die_roller_button">Dice Roller</string>
    <string name="char_creator_button">Create Character</string>
    <string name="load_char_button">Load Character</string>
    <string name="roll_result">0</string>
    <string name="Roll6">Roll</string>
    <string name="number_of_6_sided_dice">Number of 6 sided dice</string>
    <string name="number_of_8_sided_dice">Number of 8 sided dice</string>
    <string name="number_of_4_sided_dice">Number of 4 sided dice</string>
    <string name="number_of_10_sided_dice">Number of 10 sided dice</string>
    <string name="number_of_20_sided_dice">Number of 20 sided dice</string>
    <string name="indvDiceRolls" />


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_character_sheet">CharacterSheet</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Attributes</string>
    <string name="tab_text_3">Equipment</string>
</resources>
